# crypto-signal-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
n8n/: crypto_alert_workflow.json  onboarding_automation.json
src/: config.py
src/analysis/: sentiment.py  signals.py  technical.py
src/api/: routes.py
src/backtest/: engine.py
src/data/: __init__.py  fetcher.py  models.py
src/db/: queries.py
src/workflows/: scheduler.py
tests/: test_api.py  test_backtest.py  test_db.py  test_scheduler.py  test_sentiment.py  test_signals.py  test_technical.py
