[project]
name = "crypto-signal-ai"
version = "0.1.0"
description = "AI-powered crypto trading signal generator with backtesting engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "sqlite-utils>=3.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
